force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__OtherRecordTypeForBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRecordTypeForBank__c</fullName>
    <label>OTHER RECORD TYPE-FOR BANK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>