force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__OtherRecordTypeFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRecordTypeFormu__c</fullName>
    <formula>clofor_com_cfs__OtherRevenueCostID__r.RecordType.Name</formula>
    <label>OTHER RECORD TYPE-FORMULA</label>
    <type>Text</type>
</CustomField>