force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__OtherRevenueCostID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OtherRevenueCostID__c</fullName>
    <label>OTHER REVENUE/COST ID</label>
    <referenceTo>clofor_com_cfs__OtherRevenueCost__c</referenceTo>
    <relationshipLabel>OTHER+BANK</relationshipLabel>
    <relationshipName>OtherBank</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>