force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__UnpaidBalanceOfOtherForBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfOtherForBank__c</fullName>
    <label>UNPAID BALANCE OF OTHER-FOR BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>