force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__UnreceivedBalanceOfOtherFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalanceOfOtherFormula__c</fullName>
    <formula>clofor_com_cfs__OtherRevenueCostID__r.clofor_com_cfs__DifferenceOtherRevenue__c</formula>
    <label>UNRECEIVED BALANCE OF OTHER-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>