force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__UnreceivedBalOfOtherUSDBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalOfOtherUSDBank__c</fullName>
    <label>UNRECEIVED BAL OF OTHER(USD)-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>