force-app/main/default/objects/clofor_com_cfs__OtherBank__c/fields/clofor_com_cfs__UnreceivedBalOfOtherUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnreceivedBalOfOtherUSDFormu__c</fullName>
    <formula>clofor_com_cfs__OtherRevenueCostID__r.clofor_com_cfs__DifferenceOtherRevenueUSD__c</formula>
    <label>UNRECEIVED BAL OF OTHER(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>